分享黑苹果  EFI  clover  5103

--- a/EFI/CLOVER/kexts/Other/USBPorts.kext/Contents/Info.plist
+++ b/EFI/CLOVER/kexts/Other/USBPorts.kext/Contents/Info.plist
@@ -38,14 +38,14 @@
 			<dict>
 				<key>port-count</key>
 				<data>
-				BwAAAA==
+				DAAAAA==
 				</data>
 				<key>ports</key>
 				<dict>
 					<key>HS01</key>
 					<dict>
 						<key>UsbConnector</key>
-						<integer>3</integer>
+						<integer>0</integer>
 						<key>port</key>
 						<data>
 						AQAAAA==
@@ -85,6 +85,15 @@
 						<key>port</key>
 						<data>
 						BwAAAA==
+						</data>
+					</dict>
+					<key>SSP1</key>
+					<dict>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+						<key>port</key>
+						<data>
+						DAAAAA==
 						</data>
 					</dict>
 				</dict>
